--- a/application/install/view/step3.html
+++ b/application/install/view/step3.html
@@ -60,7 +60,7 @@
                     </tr>
                     <tr>
                         <td class="text-left">数据库名：</td>
-                        <td><input type="text" name="dbname" id="dbname" value="special_new" class="input"></td>
+                        <td><input type="text" name="dbname" id="dbname" value="database" class="input"></td>
                         <td>
                             <div id="js-install-tip-dbname">
                                 <span class="gray">最好小写字母</span>
