--- a/public/template/admin_default/backstage/builder/_key.html
+++ b/public/template/admin_default/backstage/builder/_key.html
@@ -165,16 +165,15 @@
                 var limit = parseInt('{$field.opt}');
                 var uploader_{$field.name}= WebUploader.create({
                     // 选完文件后，是否自动上传。
-                      // sw{:L("_F_FILE_PATH_")}
                     swf: 'Uploader.swf',
                     // 文件接收服务端。
                     server: "{:url('common/File/uploadpicture',array('session_id'=>session_id()))}",
                     // 选择文件的按钮。可选。
-                    // 内部根据当前运行是创建，可能是input元素，{:L("_AND_IT_COULD_BE_FLASH_")}.
+                    // 内部根据当前运行是创建，可能是input元素，
                     //pick: '#upload_multi_image_{$field.name}',
                     pick: {'id': id, 'multi': true},
                     fileNumLimit: limit,
-                    // 只允许{:L("_SELECT_PICTURES_")}文件。
+                    // 只允许文件。
                     accept: {
                         title: 'Images',
                         extensions: 'gif,jpg,jpeg,bmp,png',
