--- a/public/template/admin_default/backstage/index/index.html
+++ b/public/template/admin_default/backstage/index/index.html
@@ -3,9 +3,9 @@
 <block name="body">
     <div class="layui-elem-quote">
         <a href="{:url('backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
-        <a><cite>仪表盘</cite></a>
+        <a><cite>系统信息</cite></a>
     </div>
-    <fieldset class="layui-elem-field layui-field-title">
+<!--     <fieldset class="layui-elem-field layui-field-title">
         <legend>常用操作</legend>
     </fieldset>
     <div class="portlet light bordered">
@@ -61,7 +61,7 @@
                 </div>
 
             </div>
-            <!-- Activate live tiles -->
+            Activate live tiles
             <script type="text/javascript">
                 $(function () {
                     $(".live-tile, .flip-list").not(".exclude").liveTile();
@@ -147,7 +147,7 @@
                 };
             </script>
         </div>
-    </div>
+    </div> -->
     <fieldset class="layui-elem-field layui-field-title">
         <legend>{:lang('_SYSTEM_INFO_')}</legend>
     </fieldset>
