--- a/public/template/admin_default/backstage/order/print_select.html
+++ b/public/template/admin_default/backstage/order/print_select.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<script type="text/javascript" src="__STATIC__/js/jquery-2.0.3.min.js"></script>
 </head>
 <body onload="load()">
-
 
 <volist name="orders" id="vo">
 	<div style="text-align:left;">
